<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backfround"
    >


    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="-90dp"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_num"
        android:id="@+id/textView2" />

    <EditText

       android:layout_marginTop="150dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/reg_name"
        android:ems="10"
        android:id="@+id/edit_text_usrname" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reg_psw"
        android:ems="10"
        android:id="@+id/edit_text_passwd" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reg_psw_confirm"
        android:ems="10"
        android:id="@+id/edit_text_passwd_confirm" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/reg_email"
        android:id="@+id/editText_email" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/reg_phone"
        android:id="@+id/editText_phone" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/reg_addr"
        android:ems="10"
        android:id="@+id/editText_addr" />

    <Button
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="点击注册"

        android:background="#39daf7"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="85dp"

        />


</LinearLayout>